test/tests/stages/1_int_constants/invalid_parse/extra_junk.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[11]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(2)
  ;
  }
  identifier(foo)
